Analisis y transfomacion de la variable Regional Indicator

--- a/src/exploration.ipynb
+++ b/src/exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "babf373a",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "c1ad9316",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "5d9a4b97",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "e8fe41bc",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "463c71a8",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "581e4f9f",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "9c01ba3a",
    "metadata": {},
    "outputs": [
@@ -246,9 +246,92 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24ba06d9",
+   "id": "ccd5ef0e",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ahora vamos a analizar los nulos que tenemos en la Columna Regional indicator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "13f1732e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [Country, Year]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \" SELECT DISTINCT Country, year FROM df_all WHERE `Regional indicator` IS NULL\"\n",
+    "resultado = ps.sqldf(query, locals())\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "882db4e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Country  Year            Regional indicator\n",
+      "0   Cyprus  2015                Western Europe\n",
+      "1   Cyprus  2016                Western Europe\n",
+      "2   Cyprus  2017                Western Europe\n",
+      "3   Cyprus  2018  Middle East and North Africa\n",
+      "4   Cyprus  2019                          None\n",
+      "5   Cyprus  2020                Western Europe\n",
+      "6   Cyprus  2021                Western Europe\n",
+      "7   Cyprus  2022            Sub-Saharan Africa\n",
+      "8   Cyprus  2023            Sub-Saharan Africa\n",
+      "9   Cyprus  2024                Western Europe\n",
+      "10  Gambia  2019                          None\n",
+      "11  Gambia  2020            Sub-Saharan Africa\n",
+      "12  Gambia  2021            Sub-Saharan Africa\n",
+      "13  Gambia  2022            Sub-Saharan Africa\n",
+      "14  Gambia  2023            Sub-Saharan Africa\n",
+      "15  Gambia  2024            Sub-Saharan Africa\n",
+      "16  Greece  2015                Western Europe\n",
+      "17  Greece  2016                Western Europe\n",
+      "18  Greece  2017  Middle East and North Africa\n",
+      "19  Greece  2018                Western Europe\n",
+      "20  Greece  2019  Middle East and North Africa\n",
+      "21  Greece  2020  Middle East and North Africa\n",
+      "22  Greece  2021  Middle East and North Africa\n",
+      "23  Greece  2022  Middle East and North Africa\n",
+      "24  Greece  2023  Middle East and North Africa\n",
+      "25  Greece  2024  Middle East and North Africa\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \" SELECT DISTINCT Country, year, `Regional indicator` FROM df_all where country IN ('Greece', 'Cyprus','Gambia') ORDER BY Country\"\n",
+    "resultado = ps.sqldf(query, locals())\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c633ddce",
+   "metadata": {},
+   "source": [
+    "Parece que un mismo País depende del año se le asigna una región. Los nulos se encuentran en:\n",
+    "- Chipre 2019\n",
+    "- Gambia 2019\n",
+    "- Grecia 2017\n",
+    "\n",
+    "Se propone sustituir los nulos por la moda"
+   ]
   }
  ],
  "metadata": {
