--- a/src/exploration.ipynb
+++ b/src/exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "babf373a",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "c1ad9316",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "5d9a4b97",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "e8fe41bc",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "463c71a8",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "581e4f9f",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "9c01ba3a",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "13f1732e",
    "metadata": {},
    "outputs": [
@@ -262,9 +262,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [Country, Year]\n",
-      "Index: []\n"
+      "  Country  Year\n",
+      "0  Greece  2017\n",
+      "1  Cyprus  2019\n",
+      "2  Gambia  2019\n"
      ]
     }
    ],
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "882db4e1",
    "metadata": {},
    "outputs": [
@@ -303,7 +304,7 @@
       "15  Gambia  2024            Sub-Saharan Africa\n",
       "16  Greece  2015                Western Europe\n",
       "17  Greece  2016                Western Europe\n",
-      "18  Greece  2017  Middle East and North Africa\n",
+      "18  Greece  2017                          None\n",
       "19  Greece  2018                Western Europe\n",
       "20  Greece  2019  Middle East and North Africa\n",
       "21  Greece  2020  Middle East and North Africa\n",
@@ -331,6 +332,109 @@
     "- Grecia 2017\n",
     "\n",
     "Se propone sustituir los nulos por la moda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e404ab4b",
+   "metadata": {},
+   "source": [
+    "Ahora vamos a analizar los duplicados en nuestro dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "aa810842",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ranking</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Regional indicator</th>\n",
+       "      <th>Happiness score</th>\n",
+       "      <th>GDP per capita</th>\n",
+       "      <th>Social support</th>\n",
+       "      <th>Healthy life expectancy</th>\n",
+       "      <th>Freedom to make life choices</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Perceptions of corruption</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Ladder score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Ranking, Country, Regional indicator, Happiness score, GDP per capita, Social support, Healthy life expectancy, Freedom to make life choices, Generosity, Perceptions of corruption, Year, Ladder score]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_all[df_all.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c96b072",
+   "metadata": {},
+   "source": [
+    "No tenemos duplicados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a4a7082d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Realizamos las transformaciones de los nulos y duplicados\n",
+    "moda_greece = df_all[df_all[\"Country\"] == \"Greece\"][\"Regional indicator\"].mode()[0]\n",
+    "df_all.loc[(df_all[\"Country\"] == \"Greece\") & (df_all[\"Regional indicator\"].isnull()), \"Regional indicator\"] = moda_greece\n",
+    "\n",
+    "moda_cyprus = df_all[df_all[\"Country\"] == \"Cyprus\"][\"Regional indicator\"].mode()[0]\n",
+    "df_all.loc[(df_all[\"Country\"] == \"Cyprus\") & (df_all[\"Regional indicator\"].isnull()), \"Regional indicator\"] = moda_cyprus\n",
+    "\n",
+    "moda_gambia = df_all[df_all[\"Country\"] == \"Gambia\"][\"Regional indicator\"].mode()[0]\n",
+    "df_all.loc[(df_all[\"Country\"] == \"Gambia\") & (df_all[\"Regional indicator\"].isnull()), \"Regional indicator\"] = moda_gambia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6a9e427",
+   "metadata": {},
+   "source": [
+    "A continuación vamos a estudiar el contexto de las variables"
    ]
   }
  ],
